src/app/components/core/about-page/about-page.component.scss
.about-page-container {
    display: flex;
    justify-content: center;
    width: 100vw;
    height: 100vh;
    padding: 0;
    margin: 0;
    background-color: black;
    overflow: hidden;
}

.information {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    width: 40vw;
    font-size: calc(10px + (40 - 10) * ((100vw - 50px) / (2000 - 50)));
    color: white;
    transform-style: preserve-3d;
    transition: all 1s ease;
    background: transparent;
    img {
        width: 100%;
        height: auto;
        position: absolute;
        box-shadow: #FF00FF 0px 0px 30px 3px;
        backface-visibility: hidden;
    }
    .about-me {
        transform: rotateY(180deg);
        width: calc(100% - 3rem);
        height: calc(40vw / 1.3164983165 - 3rem);
        box-shadow: #FF00FF 0px 0px 30px 3px;
        background-color: #1c1c1c;
        backface-visibility: hidden;
        padding: 1.5rem;
    }
    ul {
        width: 50%;
        height: calc(100% - 3rem);
        display: flex;
        flex-direction: column;
        justify-content: space-around;
    }
    li {
        display: flex;
    }
    i {
        display: flex;
        flex-direction: column;
        justify-content: center;
    }
    a {
        color: white;
        text-decoration: none;
    }
    a:hover {
        color: #FF00FF;
    }
}

.information:hover {
    transform: rotateY(180deg);
}

.top-left,
.top-right,
.bottom-left,
.bottom-right {
    position: absolute;
    display: flex;
    width: 50vw;
    .quote {
        background: #FF00FF;
        display: flex;
        border-radius: 10px;
        margin: 3rem;
        width: 100%;
        height: 10rem;
        transition: all 0.5s ease-in-out;
        color: white;
        i {
            margin: 2.5rem;
            font-size: 5rem;
        }
        &:hover {
            clip-path: circle(75%);
        }
        h1 {
            display: flex;
            flex-direction: column;
            justify-content: center;
            text-align: center;
        }
    }
}

.top-left,
.bottom-left {
    justify-content: left;
    left: 0;
    .quote {
        clip-path: circle(5rem at 5rem 5rem);
        h1 {
            padding-right: 1rem;
        }
    }
}

.top-right,
.bottom-right {
    justify-content: right;
    right: 0;
    .quote {
        clip-path: circle(5rem at calc(100% - 5rem) 5rem);
        h1 {
            padding-left: 1rem;
        }
    }
}

.top-left,
.top-right {
    top: 100vh;
}

.bottom-left,
.bottom-right {
    bottom: -100vh
}

.top-left {
    .quote {
        &:hover {
            background: #F25022;
            box-shadow: #F25022 0px 0px 30px 3px;
        }
    }
}

.top-right {
    .quote {
        &:hover {
            background: #7FBA00;
            box-shadow: #7FBA00 0px 0px 30px 3px;
        }
    }
}

.bottom-left {
    .quote {
        &:hover {
            background: #00A4EF;
            box-shadow: #00A4EF 0px 0px 30px 3px;
        }
    }
}

.bottom-right {
    .quote {
        &:hover {
            background: #FFB900;
            box-shadow: #FFB900 0px 0px 30px 3px;
        }
    }
}

.author {
    font-style: italic;
}

